--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     background-color: rgb(245, 245, 245);
     border-radius: 0px 0px 20px 20px;
-    box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.164);
+    box-shadow: 0px 0px 90px 0px rgba(0, 0, 0, 0.132);
     margin-bottom: 50px;
 
 }
@@ -35,6 +35,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-bottom: 100px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -49,10 +50,33 @@ body{
     width: 250px;
     border-radius: 10px 10px 50px 10px;
     background-color: whitesmoke;
-    box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.164);
+    box-shadow: 0px 0px 100px 0px rgba(0, 0, 0, 0.132);
 
 }
 .img1 img{
     border-radius: 0px 0px 50px 0px;
 
 }
+
+
+
+
+/* Main Cont */
+/* Quote,   */
+.main{
+    margin-top: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.main p{
+    max-width: 600px;
+    text-align: center;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+@media only screen and (max-width: 600px) {
+    .main p{
+    max-width: 300px;
+
+    }
+  }
