--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
     border-radius: 0px 0px 20px 20px;
     box-shadow: 0px 0px 90px 0px rgba(0, 0, 0, 0.132);
     margin-bottom: 50px;
-
+    
 }
 .navbar ul li{
     text-decoration: none;
@@ -70,7 +70,14 @@ body{
     justify-content: center;
 }
 .main p{
+    background-color: #4158D0;
+background-image: linear-gradient(43deg, #4158D0 0%, #C850C0 46%, #FFCC70 100%);
+color: white;
+    border-radius: 12px;
+    padding: 20px 20px 20px 20px;
     max-width: 600px;
+    max-height: 600px;
+    align-items: center;
     text-align: center;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
