--- a/style.css
+++ b/style.css
@@ -87,3 +87,22 @@ color: white;
 
     }
   }
+
+
+
+
+
+  /* footer */
+  .footer{
+    background-color: black;
+    color: whitesmoke;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 70px;
+    height: 60px;
+    padding-top: 20px;
+    font-size: 10px;
+    border-radius: 20px 20px 0px 0px;
+  }
+  .footer p{
+    font-size: 8px;
+  }  
